appId: com.souzaworks.mototake
---
- clearState
- launchApp
- extendedWaitUntil:
    visible:
      id: login-email
    timeout: 60000
- tapOn:
    id: login-email
- inputText: "__COURIEREMAIL__"
- tapOn:
    id: login-password
- inputText: "__PASSWORD__"
- tapOn:
    id: login-submit
- tapOn:
    id: courier-accept-order
- tapOn: "Aceitar entrega"
- assertVisible: "Entrega aceita.*|Minhas entregas|Entregas"
