appId: com.souzaworks.mototake
---
- clearState
- launchApp
- extendedWaitUntil:
    visible:
      id: login-email
    timeout: 60000
- tapOn:
    id: login-email
- inputText: "__COURIEREMAIL__"
- tapOn:
    id: login-password
- inputText: "__PASSWORD__"
- tapOn:
    id: login-submit
- tapOn:
    id: courier-tab-orders
- assertVisible:
    id: courier-my-order-card
- tapOn:
    id: courier-update-order-status
- tapOn: "Confirmar"
- assertVisible: "coletada|entregue|Atualizando|Marcar"
- tapOn:
    id: courier-update-order-status
- tapOn: "Confirmar"
- assertVisible: "entregue|Concluídas|Concluidas"
